@@ -46,6 +46,7 @@
 	- rpmds: use the parsing vector and container.
 	- rpmds: expose methods to parse and compare EVR ala rpm.
 	- rpmds: add methods to compare EVR ala dpkg.
+	- fix: rpmEVRparser was not terminating epoch correctly.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
